<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <!-- Globale Übersetzung -->
    <string name="app_name">Zeiterfassung</string>
    <!-- Startbildschirm -->
    <string name="lbl_start_time">Startzeit</string>
    <string name="lbl_end_time">Endzeit</string>
    <string name="cmd_start">Starten</string>
    <string name="cmd_end">Beenden</string>
    <!-- Ausflistung -->
    <string name="col_start">Startzeit</string>
    <string name="col_end">Endzeit</string>
    <string name="col_work_time">Arbeitszeit</string>
    <string name="ctx_edit">Bearbeiten</string>
    <string name="ctx_delete">Löschen</string>
    <string name="ctx_export">CSV Export</string>
    <string name="ctx_send_to">Senden</string>
    <string name="ctx_calendar">Kalender-Eintrag</string>
    <string name="dlg_export_title">Export . . .</string>
    <string name="dlg_export_message">Daten werden exportiert . . .</string>
    <!-- Bearbeiten -->
    <string name="lbl_contact">Kontankt</string>
    <string name="cmd_select_contact">Suche</string>
    <string name="lbl_position">GPS Position</string>
    <string name="cmd_select_position">Zuordnen</string>
    <!-- Menüs -->
    <!-- Startbildschirm -->
    <string name="opt_list_long">Liste der Einträge</string>
    <string name="opt_list_short">Liste</string>
    <string name="opt_pref_short">Einstellungen</string>
    <string name="opt_pref_long">App Einstellungen</string>
    <!-- Bearbeitung -->
    <string name="opt_save_short">Speichern</string>
    <string name="opt_save_long">Eintrag speichern</string>
    <string name="opt_cancel_short">Abbrechen</string>
    <string name="opt_cancel_long">Bearbeitung abbrechen</string>
    <string name="opt_delete_short">Löschen</string>
    <string name="opt_delete_long">Eintrag löschen</string>
    <string name="opt_info_short">Info</string>
    <string name="opt_info_long">Informationen</string>
    <!-- Dialoge -->
    <string name="dlg_confirm_title">Löschbestätigung</string>
    <string name="dlg_confirm_message">Wollen Sie den Eintrag wirklich löschen?</string>
    <string name="dlg_cancel">Abbrechen</string>
    <string name="dlg_delete">Löschen</string>
    <string name="dlg_position_title">GPS ausgeschatet</string>
    <string name="dlg_position_message">Wollen Sie GPS einschalten?</string>
    <string name="dlg_yes">Ja</string>
    <string name="dlg_no">Nein</string>
    <!-- Ausnahmen -->
    <string name="illegal_uri">Diese URI ist mit diesem ContentProvider nicht erlaubt.</string>
    <!-- App Einstellungen -->
    <string name="pref_export_path_title">Export-Verzeichnis</string>
    <string name="pref_export_path_message">Geben Sie das Export-Verzeichnis hier an.</string>
    <string name="pref_header_general_title">Allgemein</string>
    <string name="pref_header_general_message">Allgemeine Angaben zur App</string>
    <string name="pref_send_to_title">Senden an</string>
    <string name="pref_send_to_message">E-mail-Adresse des Empfängers für den E-Mail-Export</string>
    <!-- Info -->
    <string name="lbl_app_info">Infomeldungen</string>
    <!-- ACRA -->
    <string name="crash_toast_text">Die Zeiterfassungs-App ist abgestürzt, bitte senden Sie die Fehlermeldung an den Entwickler!</string>
    <string name="crash_notif_ticker_text">Zeiterfassung App ist abgestürzt!</string>
    <string name="crash_notif_title">Absturz!</string>
    <string name="crash_dialog_comment_prompt">Bitte geben Sie die Absturzursache ein:</string>
    <string name="opt_download">Download</string>
</resources>
