<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_start_time" />

    <EditText
        android:id="@+id/txt_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_end_time" />

    <EditText
        android:id="@+id/txt_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contact" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <Button
            android:id="@+id/cmd_select_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_select_contact" />
        
		    <EditText
		        android:id="@+id/txt_contact"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:inputType="text"
		        android:maxLines="1" />
    </LinearLayout>

</LinearLayout>