<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="7dp"
		android:weightSum="3" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:maxLines="1"
			android:text="@string/col_start"
			android:textStyle="bold"
			android:width="0dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:maxLines="1"
			android:text="@string/col_end"
			android:textStyle="bold"
			android:width="0dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:maxLines="1"
			android:text="@string/col_work_time"
			android:textStyle="bold"
			android:width="0dp" />
	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:background="#cccccc" />

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
	</ListView>

</LinearLayout>